--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,34 @@
 	"files.associations": {
 		"client.h": "c",
 		"stdlib.h": "c",
-		"server.h": "c"
-	}
+		"server.h": "c",
+		"*.ipp": "cpp"
+	},
+	"cSpell.enabledLanguageIds": [
+		"asciidoc",
+		"cpp",
+		"csharp",
+		"css",
+		"go",
+		"handlebars",
+		"html",
+		"jade",
+		"javascript",
+		"javascriptreact",
+		"json",
+		"latex",
+		"less",
+		"markdown",
+		"php",
+		"plaintext",
+		"pub",
+		"python",
+		"restructuredtext",
+		"rust",
+		"scss",
+		"text",
+		"typescript",
+		"typescriptreact",
+		"yml"
+	]
 }
