--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
 	"files.associations": {
-		"server.h": "c"
+		"server.h": "c",
+		"array": "c",
+		"hash_map": "c",
+		"string_view": "c",
+		"cmath": "c"
 	}
 }
