--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 server
+client
 !src/server
 !include/server
+!src/client
+!include/client
 *.o
 *~
 *.gch
@@ -10,5 +13,3 @@ vgcore*
 
 
 coverage/
-
-client
