added nick command. Need to add a trigger on OK loglevel

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
           command: make clean
       - run:
           name: Unit Tests Execution
-          command: ./unit_tests.out -j 1 --xml=tests/results.xml --always-succeed
+          command: ./unit_tests.out --xml=tests/results.xml --always-succeed
       - store_test_results:
           path: .
 
